--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,16 +1,15 @@
 #headerdata{
    width: 100%;
    height: 50px;
-   background-color: rgba(4, 25, 254, 0.557);
+   background-color: rgba(78, 78, 78, 0.557);
    text-align: right;
    padding-right: 100px;
    padding-top: 5px;
+   gap: 20px;
    font-size: 20px;
    position: sticky;
    top: 0;
    z-index: 3;
-   
-
 }
 #footer{
    width: 100%;
@@ -23,6 +22,17 @@
    gap: 30px;
    width: 85%;
    margin: auto;
+}
+.head{
+   text-align: center;
+   top: 20px;
+   padding: 10px;
+   color: rgb(0, 200, 255);
+}
+h2{
+   text-align: center;
+   top: 20px;
+   padding: 10px;
 }
 h1{
    text-align: center;
